--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   configure_infrastructure: 
     docker:
-      - image: cimg/python:3.10 
+      - image: python:3.7-alpine3.11
     steps:
       - checkout
       - add_ssh_keys:
@@ -10,7 +10,7 @@ jobs:
           fingerprints: ["24:12:2a:03:f0:6a:f2:de:45:08:49:8f:50:9e:a8:5f"] 
       - run:
           name: Install Ansible
-          command: pip install ansible
+          command: apk add --update ansible
             # Install Ansible
       - run:
           name: protect file
