--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,24 @@ jobs:
           name: Run Playbook and Configure server
           command: |
             ansible-playbook -i inventory playbook.yml
+  smoke_test:
+    docker:
+   - image: alpine:latest
+    steps:
+      - run: apk add --update curl
+      - run:
+        name: smoke test
+        command: |
+          URL="https://blog.udacity.com/"
+          # Test if website exists
+          if curl -s --head ${URL} 
+          then
+            return 0
+          else
+            return 1
+          fi
 workflows:
   my_workflow:
       jobs:
         - configure_infrastructure
+        - smoke_test
