--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,11 +26,9 @@ jobs:
     docker:
       - image: alpine:latest
     steps:
-      - run:
-          name: Test job
-          # Fail the job intentionally to simulate an error.
-          command:  return 1
-      - destroy_environment  
+      - run: return 1
+      - destroy_environment
+        when: on_fail
 workflows:
   my_workflow:
       jobs:
